pack of logs and exceptions handlers